--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^6.0.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.1",
+    "jose": "^5.9.6",
     "nodemon": "^3.1.7"
   },
   "devDependencies": {
-    "prettier": "3.4.2",
-    "prisma": "^6.0.1"
+    "prettier": "3.4.2"
   }
 }
