--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^6.0.1",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.1",
     "jose": "^5.9.6",
-    "nodemon": "^3.1.7"
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.46",
+    "nodemon": "^3.1.7",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "prettier": "3.4.2"
